# ShiShiGa-Workspace

./: .gitignore  CMakeLists.txt  CMakePresets.json  configure-msvc.ps1  main.cpp  readme.md
.history/: CMakeLists_20260523124322.txt  CMakeLists_20260523125621.txt  CMakeLists_20260523140457.txt  CMakeLists_20260523144644.txt
engine/translations/: qt_de.qm  qt_pt_BR.qm  qt_sv.qm  qt_tr.qm  qt_zh_CN.qm
resources/: qt.conf
src/core/: ServiceFaviconProvider.cpp  ServiceFaviconProvider.h  ServiceManager.cpp  ServiceManager.h  SettingsManager.cpp  SettingsManager.h  UserAgentSettings.cpp  UserAgentSettings.h
src/diagnostics/: DiagnosticsInfo.cpp  DiagnosticsInfo.h  DiagnosticsWebEnginePage.cpp  DiagnosticsWebEnginePage.h  WebEngineConsoleLog.cpp  WebEngineConsoleLog.h  WebEngineDiagnosticsInfo.cpp  WebEngineDiagnosticsInfo.h
src/logging/: CrashLogger.cpp  CrashLogger.h
src/platform/: WinEnginePaths.cpp  WinEnginePaths.h
src/profile/: ProfileManager.cpp  ProfileManager.h  ProfileSecurity.cpp  ProfileSecurity.h
src/services/: AiService.h  ServiceRegistry.cpp  ServiceRegistry.h  ServiceState.h
src/ui/: DebugConsoleWindow.cpp  DebugConsoleWindow.h  DevConsoleWindow.cpp  DevConsoleWindow.h  MainWindow.cpp  MainWindow.h  ProfileManagerWidget.cpp  ProfileManagerWidget.h  ServiceButton.cpp  ServiceButton.h  ServiceSidebar.cpp  ServiceSidebar.h  ServiceSidebarButton.cpp  ServiceSidebarButton.h  SettingsWindow.cpp  SettingsWindow.h  SidebarAddButton.cpp  SidebarAddButton.h  UserAgentSettingsWidget.cpp  UserAgentSettingsWidget.h
